--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,15 @@ stages:
       displayName: 'Use .NET SDK $(dotnetSdkVersion)'
       inputs:
         version: '$(dotnetSdkVersion)'
-
+    - task: UseNode@1
+      displayName: 'Use Node.js 18.x'
+      inputs:
+        version: '18.x'
     - task: Npm@1
       displayName: 'Run npm install'
       inputs:
         verbose: false
+    
 
     - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
       displayName: 'Compile Sass assets'
